[workspace]
members = [".", "migration"]

[package]
name = "dlebot"
version = "0.1.0"
authors = ["Michel Romero Rodríguez <studentenherz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = [
    "macros",
    "webhooks",
    "webhooks-axum",
] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
sea-orm = { version = "0.11.3", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
reqwest = "0.11.18"
chrono = "0.4.26"
base64 = "0.21.2"
usvg = "0.35.0"
resvg = "0.35.0"
rand = "0.8.5"
