[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenvy = "0.15.7"

[dependencies.sea-orm-migration]
version = "0.11.0"
features = ["sqlx-postgres", "runtime-tokio-rustls"]
